# pico_dm_qd3503728_noos

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  backlight.c  ft6236.c  i2c_tools.c  ili9488.c  lv_conf.h  main.c
.github/workflows/: cmake.yml
factory/: CMakeLists.txt  test.c  tools.c  tools.h
factory/font/: fsex_16.c  fsex_20.c
include/: backlight.h  ft6236.h  ili9488.h
pio/: CMakeLists.txt  i80.c  i80.pio
porting/: lv_port_disp_template.c  lv_port_disp_template.h  lv_port_indev_template.c
